# wrist-pose-estimation

./: Dockerfile  README.md  aruco_detect.py  ros_run.sh
src/blazepose_right_arm_3d/: package.xml  setup.cfg  setup.py
src/blazepose_right_arm_3d/blazepose_right_arm_3d/: aruco_tf_node.py  blazepose_map3d.py  blazepose_right_arm_3d_node.py  calibration.py  pointcloud_test.py  right_arm_viewer.py  tf2.py  wrist_to_aruco.py
src/blazepose_right_arm_3d/launch/: blazepose_right_arm_launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/spot_description/share/spot_description/: local_setup.sh  package.sh
src/install/spot_description/share/spot_description/launch/: display.launch.py
src/install/spot_description/share/spot_description/urdf/: simple_robot.urdf  spot_with_arm.urdf
src/log/: latest_build
src/spot_description/: CMakeLists.txt
src/spot_description/config/: display.rviz
src/spot_description/launch/: gazebo.launch.py
